--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "emailjs-com": "^3.2.0",
+        "framer-motion": "^12.18.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-intersection-observer": "^9.16.0"
